# SHERPA

./: CMakeLists.txt  INPUT  POSCAR  README.md  TARGET  ase_calc.py  calculator.c  calculator.h  config.c  config.h  dimer.c  dimer.h  input.c  input.h  main.c  target.c  utils.c  utils.h
example/: Final.POSCAR  README.md  SHERPA.MODECAR  TARGET  TARGET_read
example/sherpa_ase/: Final.POSCAR  INPUT  INPUT_read  Initial.POSCAR  POSCAR  README.md  SHERPA.MODECAR  Saddle.POSCAR  run.sh
example/sherpa_lmp/: INPUT  INPUT_read  Initial.POSCAR  README.md  Saddle.POSCAR
include/: art_nouveau.h  dimer.h  input.h
lib/ase/: CMakeLists.txt  calculator.c  calculator.h  input.c  my_mpi.h
lib/lmp/: CMakeLists.txt  calculator.c  calculator.h  input.c
lib/vasp/: CMakeLists.txt  calculator.c  calculator.h  input.c  my_mpi.c  my_mpi.h
src/: CMakeLists.txt  alg_utils.c  alg_utils.h  art_nouveau.c  art_nouveau.h  calculator.c  calculator.h  config.c  config.h  dataset.c  dataset.h  dimer.c  dimer.h  extractor.c  input.c  input.h  kappa_dimer.c  kappa_dimer.h  kmc.c  linalg.c  linalg.h  lmp_calculator.c  lmp_calculator.h  main.c  my_mpi.c  my_mpi.h  snc_dimer.c  snc_dimer.h  sps_utils.c  sps_utils.h  target.c  target.h  utils.c  utils.h  vasp_calculator.c  vasp_calculator.h
src/ASE/: CMakeLists.txt  ase_calc.py  calculator.c  calculator.h
src/KMC/: input.c  input.h  kmc.c
src/LMP/: CMakeLists.txt  calculator.c  calculator.h  input.c  input.h  main.c
src/VASP/: CMakeLists.txt  calculator.c  input.c  input.h  main.c  my_mpi.c  my_mpi.h
src/ase/: CMakeLists.txt
src/lmp/: CMakeLists.txt
src/vasp/: CMakeLists.txt
utils/: files.c  files.h  kmc.sh
utils/extractor/: CMakeLists.txt
utils/kmc/: CMakeLists.txt  kmc.c
