CMAKE_MINIMUM_REQUIRED ( VERSION 3.13 )
PROJECT ( Saddle_point_search )
ENABLE_LANGUAGE ( C )

FIND_PACKAGE ( MKL CONFIG REQUIRED )

SET ( CMAKE_VERBOSE_MAKEFILE TRUE )
SET ( COMMON_SRC_FILES 
        main.c 
        config.c
        dataset.c
        dimer.c
        kappa_dimer.c
        input.c
        my_mpi.c
        target.c
        alg_utils.c
        sps_utils.c )
ADD_COMPILE_OPTIONS ( -O3 -g -Wall )
SET ( CMAKE_C_COMPILER "mpiicc" )
LINK_LIBRARIES ( m )

SET ( LAMMPS_SRC_DIRECTORY "" CACHE PATH "Path for lammps source" )
IF ( NOT LAMMPS_SRC_DIRECTORY STREQUAL "" AND EXISTS ${LAMMPS_SRC_DIRECTORY}/cmake/CMakeLists.txt )
  OPTION( BUILD_LIB "Build LAMMPS library" ON )
  ADD_SUBDIRECTORY ( ${LAMMPS_SRC_DIRECTORY}/cmake lammps )
ELSE()
  FIND_PACKAGE( LAMMPS REQUIRED )
ENDIF()

ADD_EXECUTABLE ( SPS_LMP ${COMMON_SRC_FILES} lmp_calculator.c )
TARGET_COMPILE_DEFINITIONS( SPS_LMP PRIVATE LMP )
TARGET_COMPILE_OPTIONS ( SPS_LMP PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_COMPILE_OPTIONS> )
TARGET_INCLUDE_DIRECTORIES ( SPS_LMP PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES> )
TARGET_LINK_LIBRARIES ( SPS_LMP PUBLIC $<LINK_ONLY:MKL::MKL> LAMMPS::lammps )

ADD_EXECUTABLE ( SPS_VASP ${COMMON_SRC_FILES} vasp_calculator.c )
TARGET_COMPILE_DEFINITIONS( SPS_VASP PRIVATE VASP )
TARGET_COMPILE_OPTIONS ( SPS_VASP PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_COMPILE_OPTIONS> )
TARGET_INCLUDE_DIRECTORIES ( SPS_VASP PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES> )
TARGET_LINK_LIBRARIES ( SPS_VASP PUBLIC $<LINK_ONLY:MKL::MKL> )
