set ( SRC_FILES ../main.c ../art_nouveau.c ../dimer.c ../utils.c )
add_executable ( sherpa_ase ${SRC_FILES} )
target_include_directories ( sherpa_ase PRIVATE ../../include ../../lib/ase )
target_link_libraries ( sherpa_ase PRIVATE sherpa ${LAPACK_LIBRARIES} ase )
add_custom_command ( TARGET sherpa_ase POST_BUILD COMMAND "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE:sherpa_ase>" "${CMAKE_SOURCE_DIR}/bin/$<TARGET_FILE_NAME:sherpa_ase>" )
#install( TARGETS sherpa_ase DESTINATION ${CMAKE_SOURCE_DIR}/bin )
